# gawkextlib

./: .cvsignore  .gitignore  .keepalive  AUTHORS  ChangeLog  Development  Development_web  FUTURES  Makefile.am  Makefile.in  NEWS  POSIX.STD  README  XMLChangeLog  aclocal.m4  ansi2knr.c  array.c  awk.h  awkgram.c  awkgram.y  build.sh  build_all.sh  builtin.c  check.sh  check_all.sh  configh.in  configure  configure.ac  dfa.c  dfa.h  dirloop.sh  eval.c  ext.c  field.c  floatcomp.c  gawkextlib.h  gawklib.h  hard-locale.h  io.c  main.c  (+20 more)
abort/: ChangeLog  Makefile.am  NEWS  README  abort.c  configure.ac  webTOC
abort/doc/: Makefile.am  abort.3am
abort/packaging/: gawk-abort.spec.in
abort/po/: POTFILES.in
abort/test/: Makefile.am  abort.awk  abort.ok
aregex/: AUTHORS  ChangeLog  Makefile.am  NEWS  README  aregex.c  common.h  configure.ac  webTOC
aregex/doc/: Makefile.am  aregex.3am
aregex/packaging/: gawk-aregex.spec.in
aregex/po/: POTFILES.in
aregex/test/: Makefile.am  aregex.awk  aregex.ok
awklib/: .cvsignore  .gitignore  ChangeLog  Makefile.am  Makefile.in  XMLChangeLog  xmllib.awk
awklib/xml/: ChangeLog  XMLChangeLog  dtdgport.awk  getXMLEVENT.awk  xmlbase.awk  xmlcopy.awk  xmlgawk.sh  xmllib.awk  xmltree.awk  xmlwrite.awk
csv/: AUTHORS  ChangeLog  Makefile.am  NEWS  README  awk_fieldwidth_info.c  awk_fieldwidth_info.h  common.h  common_aux.h  configure.ac  csv.c  csv_convert.c  csv_convert.h  csv_input.c  csv_input.h  csv_parser.c  csv_parser.h  csv_split.c  csv_split.h  strbuf.c  strbuf.h  webTOC
csv/awklib/: Makefile.am
csv/doc/: ChangeLog  Makefile.am  csv.3am  csv.texi  csv.xhtml  csvmode.3am  csvmode.texi  csvmode.xhtml  csvparse.3am  csvparse.texi  csvparse.xhtml  csvsplit.3am  gawk-csv-tutorial.texi  gawk-csv-tutorial.xhtml  gawk-csv.texi  xhtml2man.awk  xhtml2texi.awk
csv/packaging/: gawk-csv.spec.in
csv/po/: ChangeLog  POTFILES.in  es.po  fr.po
csv/test/: ChangeLog  Makefile.am  comma.txt  crlf.csv  crlf.ok  crlf0.csv  crlf0.ok  csv.csv  csv.ok  csvconvert.awk  csvconvert.ok  csvdump.awk  csvformat.awk  csvformat.ok  csvmode.awk  csvmode.ok  csvmode0.awk  csvmode0.ok  csvsplit.awk  csvsplit.ok  manyfields.csv  manyfields.ok  nonascii.csv  nonascii.ok  switchmode.awk  switchmode.ok
doc/: .cvsignore  ChangeLog  Makefile.am  Makefile.in  XMLChangeLog  awk_proc.eps  awkcard.in  docbook_chapter.eps  gawk.1  gawk.info  gawk.texi  gawkextlib.texi  gawkinet.info  gawkinet.texi  lflashlight.eps  rflashlight.eps  soap_reply.eps  soap_request.eps  texinfo.tex  xmlgawk.texi
errno/: .gitignore  ChangeLog  Makefile.am  NEWS  README  configure.ac  errlist.awk  errlist.h  errno.c  webTOC
errno/doc/: Makefile.am  errno.3am
errno/packaging/: gawk-errno.spec.in
errno/po/: POTFILES.in  fr.po
errno/test/: Makefile.am  testerr.awk
extension/: .cvsignore  ChangeLog  Makefile  Makefile.am  Makefile.in  XMLChangeLog  arrayparm.c  common.h  filefuncs.c  fork.c  gd.c  mpfr.c  ordchr.c  pdf.c  pdf.h  pgsql.c  readfile.c  sample.xml  steps  testarg.c  testgd.awk  testpgsql.awk  testtime.awk  testxml2pgsql.awk  time.c  xml-conv-enc  xml_enc_handler.c  xml_interface.c  xml_puller.c  xml_puller.h  zaxxon.c
extension/encodings/: README
gd/: AUTHORS  ChangeLog  Makefile.am  NEWS  README  configure.ac  gd.c  testgd.awk  webTOC
gd/doc/: ChangeLog  Makefile.am  gawk-gd.texi
gd/packaging/: ChangeLog  Makefile.am  gawk-gd.spec.in
gd/po/: ChangeLog  POTFILES.in  fr.po
gd/test/: .gitignore  ChangeLog  Makefile.am  xgdfont.ok  xgdrect.ok
haru/: AUTHORS  ChangeLog  Makefile.am  README  configure.ac  extension.makefile  pdf.c  pdf.h  webTOC
haru/packaging/: ChangeLog  gawk-haru.spec.in
haru/po/: ChangeLog  POTFILES.in  fr.po
haru/test/: ChangeLog  Makefile.am  pdftest.awk
json/: ChangeLog  Makefile.am  NEWS  NOTES  README  awkjsonhandler.cpp  awkjsonhandler.h  configure.ac  gawkapi.h  json.cpp  json_compat.awk  webTOC
json/doc/: ChangeLog  Makefile.am  json.3am
json/packaging/: gawk-json.spec.in
json/po/: POTFILES.in  fr.po
json/test/: ChangeLog  Makefile.am  json-bool.awk  json-bool.ok  json-mdim.awk  json-mdim.ok  json.awk  json.ok
lib/: AUTHORS  ChangeLog  Makefile.am  NEWS  README  XMLChangeLog  configure.ac  gawkextlib.h  strhash.c  webTOC
lib/packaging/: ChangeLog  Review  gawkextlib.spec.in
lmdb/: .gitignore  ChangeLog  Makefile.am  NEWS  README  configure.ac  headerparse.awk  lmdb.c  webTOC
lmdb/doc/: Makefile.am  lmdb.3am
lmdb/packaging/: gawk-lmdb.spec.in
lmdb/po/: POTFILES.in  fr.po
lmdb/test/: Makefile.am  basic.awk  basic.ok  dict.awk  dict.in  dict.ok  dict_cursor.awk  dict_cursor.ok  lmdb.awk  lmdb.ok
m4/: ChangeLog  (+1 more)
mbs/: AUTHORS  ChangeLog  Makefile.am  README  configure.ac  mbs.c  webTOC
mbs/doc/: ChangeLog  Makefile.am  mbs.3am
mbs/packaging/: gawk-mbs.spec.in
mbs/po/: POTFILES.in
mbs/test/: ChangeLog  Makefile.am  mbs.awk  mbs.in  mbs.ok
mpfr/: AUTHORS  ChangeLog  Makefile.am  NEWS  README  configure.ac  mpfr.c  webTOC
mpfr/doc/: ChangeLog  Makefile.am  gawk-mpfr.texi
mpfr/packaging/: ChangeLog  gawk-mpfr.spec.in
mpfr/po/: Makevars  POTFILES.in  fr.po
mpfr/test/: ChangeLog  Makefile.am
nl_langinfo/: AUTHORS  ChangeLog  Makefile.am  NEWS  README  configure.ac  nl_langinfo.c  webTOC
nl_langinfo/doc/: Makefile.am  nl_langinfo.3am
nl_langinfo/packaging/: Makefile.am  gawk-nl_langinfo.spec.in
nl_langinfo/po/: POTFILES.in  fr.po
nl_langinfo/test/: Makefile.am  nl_langinfo.awk  nl_langinfo.ok
pgsql/: AUTHORS  ChangeLog  Makefile.am  NEWS  README  configure.ac  pgsql.c  testxml2pgsql.awk  webTOC
pgsql/doc/: ChangeLog  Makefile.am  doc.makefile  fdl-1.3.texi  gawk-pgsql.texi
pgsql/packaging/: ChangeLog  gawk-pgsql.spec.in
pgsql/po/: ChangeLog  Makevars  POTFILES.in  fr.po
pgsql/test/: ChangeLog  Makefile.am  pgtest.awk  test.makefile
reclen/: ChangeLog  Makefile.am  NEWS  README  configure.ac  reclen.c  webTOC
reclen/doc/: Makefile.am  reclen.3am
reclen/packaging/: gawk-reclen.spec.in
redis/: AUTHORS  ChangeLog  Makefile.am  NEWS  README  configure.ac  redis.c  webTOC
(+308 files in other folders)
